fixed thank you screen on mobile

--- a/static/css/ua-styles.css
+++ b/static/css/ua-styles.css
@@ -870,7 +870,7 @@ h2 {
 
     .country-date-small {
         margin: -50px auto;
-        width: 700px;
+        max-width: 700px;
     }
 }
 
